0.7.3
    new icons and logo by Goran Simovic plus alternates
    added debug info for copy plugin failure
    when copy context, copy plugin skin context
    equate display :0.0 & :0 fixes #5
    changed debug info for sf ticket 88000
    fixed panel bar always shown on cancel fullscreen
    no folder size display; right-align size column
    moved refresh to after home/default on left toolbar
0.7.2   2012-03-05:
    exec function redesign (single script, noexec /tmp ok, ktsuss2 support,
        added /usr/bin/spacefm-auth)
    submitted ktsuss2 bug reports
    additional and updated language strings including shell prompts
    copy menu item now copies context
    can now create MBR and FSArchiver backups of mounted volumes
    changed 20x20 icon sizes to 22x22 to prevent blur from scaling
    apply prefs small icon size to devices, bookmarks, dirtree icons
    tab icons default to 16x16 if available in gtk icon theme
    fixed segfault on open multiple files in File Search window results
    completed open selected dir in File Search window results
    corrected folder selection history skipping empty selection
    user's manual updated to reflect changes, minor corrections
0.7.1   2012-02-21:
    changed temp file usage for better multiple instance separation
    removed sync/flush as default mount options
    auto run|on unmount no longer depends on auto-mount qualification
    auto run|on remove no longer depends on auto-mount qualification
    added auto run sensitivity
    corrected click on desktop icon obeys 'Click runs executables'
    corrected paste replace with linefeeds into multi-input
    corrected reversed order of files copied onto clipboard
    default plugin name converts spaces to hyphens
    corrected icon view change show hidden doesn't update status bar
    fixed segfault on open multiple files in File Search window results
    fixed File Search results right-click on unselected selects