@@ -5745,11 +5745,12 @@ void ptk_file_browser_find_file( GtkMenuItem *menuitem, PtkFileBrowser* file_bro
     fm_find_files( dirs );
 }
 
+/*
 void ptk_file_browser_open_folder_as_root( GtkMenuItem *menuitem,
                                                 PtkFileBrowser* file_browser )
 {
     const char* cwd;
-    char* cmd_line;
+    //char* cmd_line;
     GError *err = NULL;
     char* argv[5];  //MOD
     
@@ -5766,8 +5767,9 @@ void ptk_file_browser_open_folder_as_root( GtkMenuItem *menuitem,
         ptk_show_error( gtk_widget_get_toplevel( file_browser ), _("Error"), err->message );
         g_error_free( err );
     }
-    g_free( cmd_line );
+    //g_free( cmd_line );
 }
+*/
 
 void ptk_file_browser_focus( GtkMenuItem *item, PtkFileBrowser* file_browser, int job2 )
 {
